# Sira

./: .gitignore  README.md  cv.json  main.py  pyproject.toml
src/: agent.py  cli.py  llm_choice.py  main.py  mock_data.json  models.py  new_cv.md  parser.py  prompts.py  utils.py
src/generators/: cv_generater.py  cv_generator.py  cv_template.tex
src/sira/: agent.py  cli.py  config.py  llm_choice.py  main.py  prompts.py  utils.py
src/sira/generators/: cv_generator.py  cv_template.md
