[project]
name = "sira"
version = "0.1.0"
description = "CV tailoring agent"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "jinja2>=3.1.6",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "pydantic",
    "langchain",
    "langchain-huggingface>=1.0.1",
]

[project.scripts]

sira = "sira.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

